--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -8,5 +8,7 @@
     <dimen name="image_thumbnail_spacing">5dp</dimen>
     <dimen name="gridlayout_cell_height">40dp</dimen>
     <dimen name="gridlayout_cell_width">100px</dimen>
-
-</resources>
+    <dimen name="list_padding">10dp</dimen>
+    <dimen name="slidingmenu_offset">60dp</dimen>
+    <dimen name="shadow_width">15dp</dimen>
+</resources>
